Fix scrollbar- Safari Compatibility Fix (#372)
* implemented content for interactivity. Changed padding for wrapper. Removed unused sub-headers for the sidenav. Added image component with gatsby-image. Slight modification to text margins.

* fix formatting & run linter

* fixed small typos, set base quality in gatsby-image graphql query

* added layout changes to layout.scss

* separated tabList into its own component, minor ux fixes

* small css formatting

* fix formatting

* repeat

* resubmit PR for CI deployment

* fixed scroll bar display issue, experimental tab style change

* fix spacing for home page

* safari compatibility fix

* change tab styles for consistency

--- a/ds-ux-guidelines/src/ds-common-styles/ds-common-styles.scss
+++ b/ds-ux-guidelines/src/ds-common-styles/ds-common-styles.scss
@@ -108,10 +108,14 @@ hr {
 }
 
 .tabs__container {
-  position: relative;
   z-Index: 120;
   background-color: white;
   width: 100%;
+
+  //compatibility with safari
+  overflow: visible;
+  height: 3rem;
+  display: block;
 
   //override bulma tabs margin default (mixins.sass)
   margin-bottom: 0 !important;
