--- a/ds-ux-guidelines/src/ds-components/ds-tabs/tabs.scss
+++ b/ds-ux-guidelines/src/ds-components/ds-tabs/tabs.scss
@@ -19,7 +19,7 @@
 
 .tablist-container {
   width: inherit;
-  overflow-x: hidden;
+  // overflow-x: hidden;
 }
 
 //custom config of react-tabs
